fix: add z-index to MediaPlayer component

--- a/src/components/MediaPlayer/src/style.module.scss
+++ b/src/components/MediaPlayer/src/style.module.scss
@@ -1,5 +1,6 @@
 .wrapper {
   position: fixed;
+  z-index: 500;
   bottom: 0;
   height: 100px;
   width: 100%;
